force-app/main/default/objects/Install_Base__c/Install_Base__c.object-meta.xml
<CustomObject>
    <label>Install Base</label>
    <nameField>
        <displayFormat>IB-{0}</displayFormat>
        <label>Install Base Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Install Base</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>