force-app/main/default/objects/Install_Base__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Install Base</relationshipLabel>
    <relationshipName>Install_Base</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>