force-app/main/default/objects/Install_Base__c/fields/Amsino_Medical__c.field-meta.xml
<CustomField>
    <fullName>Amsino_Medical__c</fullName>
    <label>Amsino Medical</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>