force-app/main/default/objects/Install_Base__c/fields/Brooklands_VeraTemp__c.field-meta.xml
<CustomField>
    <fullName>Brooklands_VeraTemp__c</fullName>
    <label>Brooklands/VeraTemp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>