force-app/main/default/objects/Install_Base__c/fields/Care_Setting__c.field-meta.xml
<CustomField>
    <fullName>Care_Setting__c</fullName>
    <label>Care Setting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ambulatory</fullName>
            </value>
            <value>
                <fullName>Acute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>