force-app/main/default/objects/Install_Base__c/fields/CasMed__c.field-meta.xml
<CustomField>
    <fullName>CasMed__c</fullName>
    <label>CasMed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>