force-app/main/default/objects/Install_Base__c/fields/ClearSpec__c.field-meta.xml
<CustomField>
    <fullName>ClearSpec__c</fullName>
    <label>ClearSpec</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>