force-app/main/default/objects/Install_Base__c/fields/Competitor_of_Share__c.field-meta.xml
<CustomField>
    <fullName>Competitor_of_Share__c</fullName>
    <formula>Amsino_Medical__c + Brooklands_VeraTemp__c + CasMed__c + Covidien__c + Exergen__c + GE__c + IEM__c + iRhythm__c + McKesson_Lumeon__c + Medline__c + MidMark__c + Mindray__c + Mortara__c + NDD__c + OBP_Medical__c + Philips__c + Sklar__c + Suntech__c + Thermomedics__c  + Other__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competitor Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>