force-app/main/default/objects/Install_Base__c/fields/Covidien__c.field-meta.xml
<CustomField>
    <fullName>Covidien__c</fullName>
    <label>Covidien</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>