force-app/main/default/objects/Install_Base__c/fields/Exergen__c.field-meta.xml
<CustomField>
    <fullName>Exergen__c</fullName>
    <label>Exergen</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>