force-app/main/default/objects/Install_Base__c/fields/IEM__c.field-meta.xml
<CustomField>
    <fullName>IEM__c</fullName>
    <label>IEM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>