force-app/main/default/objects/Install_Base__c/fields/Install_Base__c.field-meta.xml
<CustomField>
    <fullName>Install_Base__c</fullName>
    <label>Install Base</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>CCSS</fullName>
            </value>
            <value>
                <fullName>Cuffs</fullName>
            </value>
            <value>
                <fullName>Lighting</fullName>
            </value>
            <value>
                <fullName>Partners in Care</fullName>
            </value>
            <value>
                <fullName>Physical Assessment</fullName>
            </value>
            <value>
                <fullName>Thermometry</fullName>
            </value>
            <value>
                <fullName>Vag Specs</fullName>
            </value>
            <value>
                <fullName>Vitals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>