force-app/main/default/objects/Install_Base__c/fields/iRhythm__c.field-meta.xml
<CustomField>
    <fullName>iRhythm__c</fullName>
    <label>iRhythm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>