force-app/main/default/objects/Install_Base__c/fields/McKesson_Lumeon__c.field-meta.xml
<CustomField>
    <fullName>McKesson_Lumeon__c</fullName>
    <label>McKesson/Lumeon</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>