force-app/main/default/objects/Install_Base__c/fields/Medline__c.field-meta.xml
<CustomField>
    <fullName>Medline__c</fullName>
    <label>Medline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>