force-app/main/default/objects/Install_Base__c/fields/MidMark__c.field-meta.xml
<CustomField>
    <fullName>MidMark__c</fullName>
    <label>MidMark</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>