force-app/main/default/objects/Install_Base__c/fields/Mindray__c.field-meta.xml
<CustomField>
    <fullName>Mindray__c</fullName>
    <label>Mindray</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>