force-app/main/default/objects/Install_Base__c/fields/Mortara__c.field-meta.xml
<CustomField>
    <fullName>Mortara__c</fullName>
    <label>Mortara</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>