force-app/main/default/objects/Install_Base__c/fields/NDD__c.field-meta.xml
<CustomField>
    <fullName>NDD__c</fullName>
    <label>NDD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>