force-app/main/default/objects/Install_Base__c/fields/OBP_Medical__c.field-meta.xml
<CustomField>
    <fullName>OBP_Medical__c</fullName>
    <label>OBP Medical</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>