force-app/main/default/objects/Install_Base__c/fields/Philips__c.field-meta.xml
<CustomField>
    <fullName>Philips__c</fullName>
    <label>Philips</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>