force-app/main/default/objects/Install_Base__c/fields/Sklar__c.field-meta.xml
<CustomField>
    <fullName>Sklar__c</fullName>
    <label>Sklar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>