force-app/main/default/objects/Install_Base__c/fields/Suntech__c.field-meta.xml
<CustomField>
    <fullName>Suntech__c</fullName>
    <label>Suntech</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>