force-app/main/default/objects/Install_Base__c/fields/Thermomedics__c.field-meta.xml
<CustomField>
    <fullName>Thermomedics__c</fullName>
    <label>Thermomedics</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>