force-app/main/default/objects/Install_Base__c/fields/Total_of_Share__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Share__c</fullName>
    <formula>Welch_Allyn_of_Share__c + Competitor_of_Share__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total % of Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>