force-app/main/default/objects/Install_Base__c/fields/Welch_Allyn__c.field-meta.xml
<CustomField>
    <fullName>Welch_Allyn__c</fullName>
    <label>Welch Allyn</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>